fix: fix height modal-up  on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1576,7 +1576,7 @@ img {
   .modal__dialog {
     max-width: 28rem; }
   .modal-up__dialog {
-    max-width: 28rem; }
+    max-width: 25rem; }
   .scroll-to-top {
     right: 20px; } }
 
