--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -163,7 +163,7 @@
       max-width: 28rem
   .modal-up
     &__dialog
-      max-width: 28rem
+      max-width: 25rem
   .scroll-to-top
     right: 20px
 // mobile first
